added my bit and changed menu order

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -56,7 +56,7 @@
     <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
       <img class="Ali" src="../img/photo/Ali.png" alt="Ali" />
       <figcaption class="c4-layout-center-left">
-        <h1>Helping with text, concept development, and sound.</h1>
+        <h1>Back-end development including the sonification process and data storage/retrieval.</h1>
       </figcaption>
     </figure>
 
@@ -145,8 +145,18 @@
         </a>
       </li>
       <li>
-        <a href="memory_list.php">
-          <div class="svg-wrapper-light" style="width:350px; margin: 120px 0 50px 0;">
+        <a href="record_memory.html">
+          <div class="svg-wrapper-light cyan" style="width:350px; margin: 120px 0 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Add Your Memories</div>
+          </div>
+        </a>
+      </li>
+      <li><a href="memory_list.php">
+          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
                 stroke="#ffffff90" />
@@ -165,23 +175,14 @@
           </div>
         </a>
       </li>
-      <li><a href="read_me.html">
+
+      <li><a href="about_us.html">
           <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
                 stroke="#ffffff90" />
             </svg>
-            <div class="button-text-light">About my creator</div>
-          </div>
-        </a>
-      </li>
-      <li><a href="introduction.html">
-          <div class="svg-wrapper-light cyan" style="width:350px; margin: 50px 0;">
-            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-                stroke="#ffffff90" />
-            </svg>
-            <div class="button-text-light">Add my memories</div>
+            <div class="button-text-light">About My Creators</div>
           </div>
         </a>
       </li>
