menu and back icon added to most pages.

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="../img/tab-icon.png">
 
   <!--Full page menu-->
-  <link rel="stylesheet" href="../css/memoryList.css">
+  <link rel="stylesheet" href="../css/memory_list.css">
   <link rel="stylesheet" href="../css/hamburger.css">
 
   <link rel="stylesheet" href="../css/izmir.min.css">
