--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -7,44 +7,67 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../img/tab-icon.png">
-<body>
 
-    <div class="videoBgWrapper">
+    <style>
+        video {
+            width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+
+<body id="body3">
+
+    <!-- <div class="videoBgWrapper">
         <video autoplay id="myVideo">
             <source src="../img/video/introduction.webm" width="100%" type="video/webm" class="videoBg">
             Your browser does not support HTML5 video :( try using Chrome!
         </video>
-    </div>
-
-    <div class="content">
-        <button id="pauseBtn" class="btn-control" onclick="Pause()">Pause</button>
+    </div> -->
+    <div class="center" style="width:80vw">
+        <video width="400" controls id="myVideo">
+            <source src="../img/video/introduction.webm" type="video/mp4">
+            Your browser does not support HTML5 video.
+        </video>
         <a href="memory_list.php">
-            <button id="skipBtn" class="btn-control" onclick="Skip()">Skip</button>
+            <button id="skipBtn" class="btn-control" onclick="Skip()">
+                <span>Skip</span>
+                <svg id="svg-skip" t="1588198092968" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg" p-id="2820" width="24" height="24">
+                    <path
+                        d="M682.666667 540.458667L246.485333 831.232A21.333333 21.333333 0 0 1 213.333333 813.482667V210.517333a21.333333 21.333333 0 0 1 33.152-17.749333L682.666667 483.541333V213.333333a42.666667 42.666667 0 0 1 85.333333 0v597.333334a42.666667 42.666667 0 0 1-85.333333 0v-270.208z m-384-210.346667v363.776L571.477333 512 298.666667 330.112z"
+                        p-id="2821" fill="#ffffff">
+                    </path>
+                </svg>
+            </button>
+
         </a>
     </div>
 
+    <!-- <div class="content">
+       <button id="pauseBtn" class="btn-control" onclick="Pause()">Pause</button>
+    </div> -->
+
     <script>
         var video = document.getElementById("myVideo");
-        var pausebtn = document.getElementById("pauseBtn");
-        var skipbtn = document.getElementById("skipBtn");
+        // var pausebtn = document.getElementById("pauseBtn");
+        // var skipbtn = document.getElementById("skipBtn");
 
-        function Pause() {
-            if (video.paused) {
-                video.play();
-                pausebtn.innerHTML = "Pause";
-            } else {
-                video.pause();
-                pausebtn.innerHTML = "Play";
-            }
-        }
+        // function Pause() {
+        //     if (video.paused) {
+        //         video.play();
+        //         pausebtn.innerHTML = "Pause";
+        //     } else {
+        //         video.pause();
+        //         pausebtn.innerHTML = "Play";
+        //     }
+        // }
         function Skip() {
             video.play();
             video.pause();
             video.currentTime = video.duration;
             pausebtn.innerHTML = "Play";
         }
-
-
     </script>
 
 </body>
