--- a/ui/choice.html
+++ b/ui/choice.html
@@ -3,20 +3,20 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Choice</title>
 	<link rel="icon" href="../img/tab-icon.png">
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/choice.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="../css/style.css">
-<link rel="stylesheet" href="../css/choice.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
 <body id="body3">
-<!--
+	<!--
 	<div class="backicon-fixed">
 		<a href="your_memory.php">
 			<svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -28,6 +28,16 @@
 		</a>
 	</div>-->
 
+	<div id="back-page-button" class="backicon-fixed">
+		<a href="memory_list.php">
+			<svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
+				p-id="1479" width="48" height="48">
+				<path
+					d="M960.243 456.737v110.526h-682.875l312.547 315.789-78.793 78.948-449.121-450 449.122-450 81.419 78.948-315.173 315.789h682.875z"
+					p-id="1480" fill="var(--ccyan)"></path>
+			</svg>
+		</a>
+	</div>
 	<div class="question-container">
 		<img src="../img/bg/modal1.png" class="frame" style="width: 800px;" />
 		<a href="memory_list.php">
