--- a/ui/delete.html
+++ b/ui/delete.html
@@ -18,7 +18,8 @@
 
 <body id="body3">
 
-  <div id = "back-page-button" class="backicon-fixed">
+
+  <div id="back-page-button" class="backicon-fixed">
     <a href="choice.html">
       <svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
         p-id="1479" width="48" height="48">
@@ -49,14 +50,14 @@
 
     <div class="button-container" id="button-container" style="margin-top:300px">
 
-      <button id="delete-button" onclick="window.location.href = 'choice.html'"  class="svg-wrapper-light cyan choice-button-wide"
-        style="border: solid 5px var(--ccyan);">
+      <button id="delete-button" onclick="window.location.href = 'choice.html'"
+        class="svg-wrapper-light cyan choice-button-wide" style="border: solid 5px var(--ccyan);">
         <div class="button-text-light" style="top:0px; color:white">
           Back</div>
       </button>
 
-      <button id="back-button" onclick="deleteMem()"
-        class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
+      <button id="back-button" onclick="deleteMem()" class="svg-wrapper-light choice-button-wide"
+        style="border: solid 5px var(--cpurple);">
         <div class="button-text-light" style="top:0px; color:var(--cpurple)">
           Delete</div>
       </button>
