--- a/ui/memory_list.html
+++ b/ui/memory_list.html
@@ -4,20 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Category</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="icon" href="../img/tab-icon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://blogfonts.com/css/aWQ9NDg4ODAmc3ViPTg4MCZjPWImdHRmPUJyeW5kYTEyMzErU2Fucy50dGYmbj1icnluZGExMjMxLXNhbnM/Brynda1231 Sans.ttf" />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+
+    <!--Full page menu-->
+    <link rel="stylesheet" href="../css/memory_list.css">
+    <link rel="stylesheet" href="../css/hamburger.css">
 </head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-<link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
-<link rel="stylesheet"
-    href="https://blogfonts.com/css/aWQ9NDg4ODAmc3ViPTg4MCZjPWImdHRmPUJyeW5kYTEyMzErU2Fucy50dGYmbj1icnluZGExMjMxLXNhbnM/Brynda1231 Sans.ttf" />
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
-
-<!--Full page menu-->
-<link rel="stylesheet" href="../css/memoryList.css">
-<link rel="stylesheet" href="../css/hamburger.css">
 
 <body class="memory-list">
 
@@ -82,13 +84,25 @@
     <div class="gradient-bg">
     </div>
 
+    <div id="back-page-button" class="backicon-fixed">
+        <a href="introduction.html">
+            <svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                p-id="1479" width="48" height="48">
+                <path
+                    d="M960.243 456.737v110.526h-682.875l312.547 315.789-78.793 78.948-449.121-450 449.122-450 81.419 78.948-315.173 315.789h682.875z"
+                    p-id="1480" fill="var(--ccyan)"></path>
+            </svg>
+        </a>
+    </div>
+
+
     <div class="container" id="tablist-section">
         <nav class="row">
-            <div class="nav col-12 justify-content-center" id="nav-tab" role="tablist" style="margin: 20px 0;">
+            <div class="nav col-lg-12 justify-content-center" id="nav-tab" role="tablist" style="margin: 20px 0;">
 
                 <a class="nav-item nav-link active" id="nav-childhood-tab" data-toggle="tab" href="#nav-childhood"
                     role="tab" aria-controls="nav-childhood" aria-selected="true">
-                    <div class="svg-wrapper-light pink" style="width:200px;margin-left:40px">
+                    <div class="svg-wrapper-light pink" style="width:200px;margin-left:40px" id="childhood-button">
                         <svg style=" height:60px; width: 200px;" xmlns="http://www.w3.org/2000/svg">
                             <rect class="shape-light pink" style="height:60px; width:200px;" stroke="#ffffff90" />
                         </svg>
@@ -154,7 +168,7 @@
                             <div class="CD-description">
                                 <span id="id">#02 </span>
                                 <span id="name">Bob</span>
-                                <h2 id="content">Memory with grandma...
+                                <h2 id="content">I will remember this current period and rapidly
                                 </h2>
                             </div>
                         </button>
@@ -180,6 +194,20 @@
                                 </h2>
                             </div>
                         </button>
+
+
+                        <button class="button-memory pink" id="childhood">
+                            <img src="../img/cd/CD-childhood.png"
+                                style="width: 150px; background-color: transparent; margin:10px;" alt="" />
+                            <div class="CD-description">
+                                <span id="id">#01 </span>
+                                <span id="name">Carla</span>
+                                <h2 id="content" class="content">I will remember this current period and rapidly
+                                    adapting to life
+                                    indoors,
+                                </h2>
+                            </div>
+                        </button>
                     </div>
                 </div>
 
@@ -187,7 +215,7 @@
             <div class="tab-pane fade col-12 col-md-10 offset-md-1" id="nav-travel" role="tabpanel"
                 aria-labelledby="nav-travel-tab">
                 <div class="row">
-                    <div class="col-12 align-self-center">
+                    <div class="col-12 align-self-center" style="margin-left:20px">
                         <button class="button-memory yellow" id="button-travel">
                             <img src="../img/cd/CD-travel.png"
                                 style="width: 150px; background-color: transparent; margin:10px;" alt="" />
@@ -206,7 +234,7 @@
             <div class="tab-pane fade col-12 col-md-10 offset-md-1" id="nav-sl" role="tabpanel"
                 aria-labelledby="nav-sl-tab">
                 <div class="row">
-                    <div class="col-12 align-self-center">
+                    <div class="col-12 align-self-center" style="margin-left:20px">
                         <button class="button-memory blue" id="button-student">
                             <img src="../img/cd/CD-study.png"
                                 style="width: 150px; background-color: transparent; margin:10px;" alt="" />
@@ -226,7 +254,7 @@
             <div class="tab-pane fade col-12 col-md-10 offset-md-1" id="nav-others" role="tabpanel"
                 aria-labelledby="nav-others-tab">
                 <div class="row">
-                    <div class="col-12 align-self-center">
+                    <div class="col-12 align-self-center" style="margin-left:20px">
                         <button class="button-memory green" id="button-others">
                             <img src="../img/cd/CD-other.png"
                                 style="width: 150px; background-color: transparent; margin:10px;" alt="" />
@@ -248,10 +276,10 @@
 
     <div class="fixed-bottom">
         <a href="record_memory.html">
-            <div class="center" style="width:500px">
+            <div class="center" style="width:500px" id="center-">
                 <div class="col-12 align-self-center" style="margin:50px 0 0 0">
                     <div class="svg-wrapper-light purple" style="width:100%; border: solid 5px var(--cpurple);">
-                        <div class="button-text-light" style="top:5px; color:white">Add My
+                        <div class="button-text-light" style="top:5px; color:white" id="addMyMemories">Add My
                             Meomories</div>
                     </div>
                 </div>
