--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -25,13 +25,74 @@
 </head>
 
 <body id="body3">
-  <!--Full page menu begin-->
+
+  <div class="content-read-me">
+    <div class="first-introduction" style="text-align: center;">
+      <h1 class="read-me-tittle">Read Me</h1>
+      <img class="hallucnation-gif" src="../img/gif/Preservation-Hallucination.gif" style="width:80vw;" />
+      <p class="introduction-content">Welcome to the memory booth, my name is IAIN, <br>
+        I am an archive of memory. I can preserve and transform <br>
+        your memories in a unique interactive way.</p>
+    </div>
+    <div class="booth">
+      <img class="booth" src="../img/bg/memory-booth.png" style="width:50vw;" />
+    </div>
+    <div class="booth-text">
+      <p class="booth-text1">Here's how it works...</p>
+    </div>
+    <div class="step1">
+      <img class="path-illustration" src="../img/bg/road.png" style="width:60vw;" />
+      <img class="step1-img" src="../img/bg/step.png" style="width:19vw;" />
+      <p class="number1">1</p>
+      <img class="step1-column" src="../img/bg/column.png" style="width:50vw;" />
+      <p class="name-word-text">Name<br><br><br>Childhood Travel Student Life Others<br><br><br><br>Enter your
+        memories.....</p>
+      <p class="name1-text">Firstly, you enter your name, memory<br> and the category of memory...</p>
+    </div>
+
+    <div class="step2">
+      <img class="step2-path-illustration" src="../img/bg/road-copy.png" />
+      <img class="step2-img" src="../img/bg/step.png" style="width:19vw;" />
+      <p class="number2">2</p>
+      <img class="step2-tape" src="../img/bg/tape.png" style="width:40vw;" />
+      <p class="step2-text1">Then I will prepare it for perservation...
+        <br>
+        <br>Text -> Code
+        <br>I interpret your memory as a string of ASCII characters, each of which has a corresponding integer number.
+        <br>
+        <br>Code -> Sound
+        <br>These numbers are then sent to a virtual synthesiser as MIDI data, and sonified as notes of a certain musical pitch.
+      </p>
+
+      <img class="step2-camera" src="../img/bg/camera.png" style="width:40vw;" />
+      <p class="step2-text2">Sound -> Visuals
+        <br>The waveform of the sound is then projected onto a circular pattern in my mind - with the colour scheme based on your category of memory.<br>
+        <br>This audio-visual piece is completely unique to your memory.</p>
+    </div>
+
+    <div class="step3">
+      <img class="step3-path-illustration" src="../img/bg/road.png" />
+      <img class="step3-img" src="../img/bg/step.png" style="width:19vw;" />
+      <p class="number3">3</p>
+      <img class="step3-archive" src="../img/bg/archive.png" style="width:60vw;" />
+      <p class="step3-text1">Once I have processed it, you will then be able to choose
+        <br> whether you want me to preserve your memory or delete it.<br>
+        <br> If you choose to save it, it will be added to my memory archive.
+        <br> You can then access your unique memory and explore other people’s
+        <br> memories in the archive any time.</p>
+    </div>
+
+    <div class="end">
+      <p class="end-text1">Thank you for using the memory booth, enjoy the journey!</P>
+    </div>
+  </div>
+
   <div class="burger">
     <span></span>
     <span></span>
     <span></span>
   </div>
-  <div class="full-menu">
+  <div class="full-menu" style="z-index: 3;">
     <ul>
       <li>
         <a href="index.html">
@@ -39,8 +100,18 @@
         </a>
       </li>
       <li>
-        <a href="memory_list.php">
-          <div class="svg-wrapper-light" style="width:350px; margin: 120px 0 50px 0;">
+        <a href="record_memory.html">
+          <div class="svg-wrapper-light cyan" style="width:350px; margin: 120px 0 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Add Your Memories</div>
+          </div>
+        </a>
+      </li>
+      <li><a href="memory_list.php">
+          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
                 stroke="#ffffff90" />
@@ -59,82 +130,21 @@
           </div>
         </a>
       </li>
-      <li><a href="read_me.html">
+
+      <li><a href="about_us.html">
           <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
                 stroke="#ffffff90" />
             </svg>
-            <div class="button-text-light">About my creator</div>
-          </div>
-        </a>
-      </li>
-      <li><a href="introduction.html">
-          <div class="svg-wrapper-light cyan" style="width:350px; margin: 50px 0;">
-            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-                stroke="#ffffff90" />
-            </svg>
-            <div class="button-text-light">Add my memories</div>
+            <div class="button-text-light">About My Creators</div>
           </div>
         </a>
       </li>
     </ul>
   </div>
+</body>
   <!--Full page menu end-->
-
-  <div class="content-read-me">
-    <div class="first-introduction" style="text-align: center;">
-      <h1 class="read-me-tittle">Read Me</h1>
-      <img class="hallucnation-gif" src="../img/gif/Preservation-Hallucination.gif" style="width:80vw;" />
-      <p class="introduction-content">Welcome to the memory booth, my name is IAIN, <br>
-        I am an archive of memory. I can preserve and transform <br>
-        your memories in a unique interactive way.</p>
-    </div>
-    <div class="booth">
-      <img class="booth" src="../img/bg/memory-booth.png" style="width:50vw;" />
-    </div>
-    <div class="booth-text">
-      <p class="booth-text1">Would you like to proceed?</p>
-    </div>
-    <div class="step1">
-      <img class="path-illustration" src="../img/bg/road.png" style="width:60vw;" />
-      <img class="step1-img" src="../img/bg/step.png" style="width:19vw;" />
-      <p class="number1">1</p>
-      <img class="step1-column" src="../img/bg/column.png" style="width:50vw;" />
-      <p class="name-word-text">Name<br><br><br>Childhood Travel Student Life Others<br><br><br><br>Enter your
-        memories.....</p>
-      <p class="name1-text">Please enter your name and your memory.</p>
-    </div>
-
-    <div class="step2">
-      <img class="step2-path-illustration" src="../img/bg/road-copy.png" />
-      <img class="step2-img" src="../img/bg/step.png" style="width:19vw;" />
-      <p class="number2">2</p>
-      <img class="step2-tape" src="../img/bg/tape.png" style="width:40vw;" />
-      <p class="step2-text1">I am preparing your memory for preservation.<br>How I am preserving your memory ？
-        <br>Encoding -> Sonifiying<br>First the memory you enter is converted to code.<br>This code is then sonified.
-      </p>
-
-      <img class="step2-camera" src="../img/bg/camera.png" style="width:40vw;" />
-      <p class="step2-text2">Sonifiying -> Visualising<br>The sound produced is visualised.<br>
-        This audio-visual piece is unique to your memory.</p>
-    </div>
-
-    <div class="step3">
-      <img class="step3-path-illustration" src="../img/bg/road.png" />
-      <img class="step3-img" src="../img/bg/step.png" style="width:19vw;" />
-      <p class="number3">3</p>
-      <img class="step3-archive" src="../img/bg/archive.png" style="width:60vw;" />
-      <p class="step3-text1">Once I have processed it will be added to the archive.<br>
-        You can access your unique memory and<br>explore other people’s memories in the archive any time.</p>
-    </div>
-
-    <div class="end">
-      <p class="end-text1">Thank you for using the memory booth, enjoy your journey.</P>
-    </div>
-  </div>
-
 
   <!--Full page menu-->
   <script>
