--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -25,12 +25,13 @@
         </video>
     </div> -->
     <div class="center" style="width:80vw">
-        <video width="400" controls id="myVideo">
-            <source src="../img/video/introduction.webm" type="video/mp4">
+        <video controls autoplay width="400" id="myVideo">
+            <source src="../img/video/introduction.webm" type="video/webm">
             Your browser does not support HTML5 video.
         </video>
         <a href="memory_list.php">
-            <button id="skipBtn" class="btn-control" onclick="Skip()">
+            <!-- <button id="skipBtn" class="btn-control" onclick="Skip()"> -->
+            <button id="skipBtn" class="btn-control">
                 <span>Skip</span>
                 <svg id="svg-skip" t="1588198092968" class="icon" viewBox="0 0 1024 1024" version="1.1"
                     xmlns="http://www.w3.org/2000/svg" p-id="2820" width="24" height="24">
@@ -40,7 +41,6 @@
                     </path>
                 </svg>
             </button>
-
         </a>
     </div>
 
@@ -62,12 +62,12 @@
         //         pausebtn.innerHTML = "Play";
         //     }
         // }
-        function Skip() {
-            video.play();
-            video.pause();
-            video.currentTime = video.duration;
-            pausebtn.innerHTML = "Play";
-        }
+        // function Skip() {
+        //     video.play();
+        //     video.pause();
+        //     video.currentTime = video.duration;
+        //     pausebtn.innerHTML = "Play";
+        // }
     </script>
 
 </body>
