update about_us <p> font

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&display=swap" rel="stylesheet">
   <link rel="icon" href="../img/tab-icon.png">
 
   <!--Full page menu-->
@@ -25,7 +26,7 @@
 <body id="about-us">
 
   <div class="member-content-head">
-    <p>About My Creator</p>
+    <p>About My Creators</p>
   </div>
 
   <div>
@@ -51,7 +52,7 @@
   </div>
 
   <div class="member-photo">
-    <p class="sound-team">Sound team</p>
+    <p class="sound-team">Preservation Team - Sound Group</p>
 
     <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
       <img class="Ali" src="../img/photo/Ali.png" alt="Ali" />
@@ -84,7 +85,7 @@
 
 
 
-    <p class="visual-team">Visual team</p>
+    <p class="visual-team">Preservation Team - Visual Group</p>
     <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
       <img class="Chen" src="../img/photo/Chen.png" />
       <figcaption class="c4-layout-center-left">
