change font into IBM

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -78,7 +78,7 @@
 
 		$("#dont-save").hover(
 			function () {
-				$("#gif-container").append('<img class="center append-img" id="tmp-img1" src="../img/gif/cancel.gif">');
+				$("#gif-container").append('<img class="center append-img" id="tmp-img1" src="../img/gif/dontsave.gif">');
 				audio_dontsave.play();
 				audio_dontsave.loop = true;
 			},
