--- a/ui/delete.html
+++ b/ui/delete.html
@@ -50,7 +50,7 @@
 
     <div class="button-container" id="button-container" style="margin-top:300px">
 
-      <button id="delete-button" onclick="window.location.href = 'choice.html'"
+      <!-- <button id="delete-button" onclick="window.location.href = 'choice.html'"
         class="svg-wrapper-light cyan choice-button-wide" style="border: solid 5px var(--ccyan);">
         <div class="button-text-light" style="top:0px; color:white">
           Back</div>
@@ -60,7 +60,7 @@
         style="border: solid 5px var(--cpurple);">
         <div class="button-text-light" style="top:0px; color:white">
           Delete</div>
-      </button>
+      </button> -->
 
       <a id="home-link" href="memory_list.php">
         <div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
@@ -74,31 +74,33 @@
 </body>
 
 <script>
-  document.getElementById("home-link").style.display = "none";
+  deleteMem();
 
-  if (localStorage.getItem('type') == "childhood") {
-    document.getElementById("gif").src = "../img/gif/delete-gif/childhood-delete.gif";
-  }
+  // document.getElementById("home-link").style.display = "none";
 
-  if (localStorage.getItem('type') == "travel") {
-    document.getElementById("gif").src = "../img/gif/delete-gif/travel-delete.gif";
-  }
+  // if (localStorage.getItem('type') == "childhood") {
+  //   document.getElementById("gif").src = "../img/gif/delete-gif/childhood-delete.gif";
+  // }
 
-  if (localStorage.getItem('type') == "student-life") {
-    document.getElementById("gif").src = "../img/gif/delete-gif/student-life-delete.gif";
-  }
+  // if (localStorage.getItem('type') == "travel") {
+  //   document.getElementById("gif").src = "../img/gif/delete-gif/travel-delete.gif";
+  // }
 
-  if (localStorage.getItem('type') == "others") {
-    document.getElementById("gif").src = "../img/gif/delete-gif/others-delete.gif";
-  }
+  // if (localStorage.getItem('type') == "student-life") {
+  //   document.getElementById("gif").src = "../img/gif/delete-gif/student-life-delete.gif";
+  // }
+
+  // if (localStorage.getItem('type') == "others") {
+  //   document.getElementById("gif").src = "../img/gif/delete-gif/others-delete.gif";
+  // }
 
   function deleteMem() {
     document.getElementById("home-link").style.display = "block";
-    document.getElementById("delete-button").style.display = "none";
-    document.getElementById("back-button").style.display = "none";
+    // document.getElementById("delete-button").style.display = "none";
+    // document.getElementById("back-button").style.display = "none";
     document.getElementById("back-page-button").style.display = "none";
     document.getElementById("text").innerHTML = "Memory deleted.";
-    document.getElementById("gif").src = "../img/gif/thank-you-for-your-time.gif";
+    document.getElementById("gif").src = "../img/gif/delete.gif";
   }
 
 </script>
