--- a/ui/view_memory[for_testing].html
+++ b/ui/view_memory[for_testing].html
@@ -19,6 +19,7 @@
 
 	<link rel="icon" href="../img/tab-icon.png">
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&display=swap" rel="stylesheet">
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
 	<link rel="stylesheet" href="../css/style.css">
 </head>
