--- a/ui/your_memory[for_testing].html
+++ b/ui/your_memory[for_testing].html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="../js/sound_and_vision.js"></script>
 
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
 	<link rel="stylesheet" href="../css/style.css">
 
@@ -154,7 +155,7 @@
 					</div>
 					<div class="record-hint" id="recordHint">
 						<img src="../img/gif/encoding.gif" id="encoding" style="width:50%">
-						<<img src="../img/gif/ready.png" id="ready" style="width:50%; margin-left: 4vh;
+						<img src="../img/gif/ready.png" id="ready" style="width:50%; margin-left: 4vh;
 						margin-top: 4vh;">
 					</div>
 				</div>
@@ -167,9 +168,9 @@
 					</p>
 				</div>
 
-				<a href="choice.html">
+				<a href="choice.html" style="text-decoration: none;">
 					<div class="svg-wrapper-light cyan"
-						style="border: solid 5px var(--ccyan);width:100%; transform:none">
+						style="border: solid 5px var(--ccyan);width:100%; transform:none;">
 						<div id="button-text" class="button-text-light" style="top:5px; color:white">Continue</div>
 					</div>
 				</a>
